terminamos section experiencia. y position del nav

--- a/index.html
+++ b/index.html
@@ -45,10 +45,9 @@
     <main>
         <section class="container-info" id="info-personal"> <!-- Section Información -->
             <div class="card-icon">
+                <h2 class="informacion-titulo">Información Personal</h2>
                     <div class="icono-card">
                         <div class="icon">
-
-
                             <div class="caja-icon" >
                             <div class="icon-container">
                                 <i class="fa-sharp fa-solid fa-user"></i>
@@ -106,53 +105,69 @@
         <section class="container-experiencia" id="experiencia"> <!-- Section Experiencia -->
             <div class="experiencia-caja">
                 <h2 class="experiencia-titulo">Experiencia Laboral</h2>
-                
-
-
-
-
-
-
-
-
-
-
-            </div>
-            <!-- <div class="container-card-experiencia">
-
-                <div class="card-exp">
-                    <picture>
-                    <img class="img-card" src="./img/trabajo1.jpg" alt="Foto de Renault Sur">
-                    </picture>
-                    <div class="card-text">
-                    <h2 class="titulo-card" >Renault Sur</h2>
-                    <p class="parrafo-card" >Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam enim quisquam, in doloribus id iusto.</p>
-                    <h3 class="footer-card">Fecha del trabajo</h3>
+                <div class="caja-card">
+                    <div class="card">
+                        <picture class="pictu-card">
+                            <img class="img-card" src="./img/app-movil.jpg" alt="foto de app movil">
+                        </picture>
+                        <div class="card-text">
+                            <h2 class="titulo-card">Desarrollo App Movil</h2>
+                            <p class="parrafo-card">Diseño y Desarrollo de App movil a medida.</p>
+                            <h3 class="footer-card">Marzo/Agosto - 2020</h3>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <picture>
+                            <img class="img-card" src="./img/desarrolloweb.jpg" alt="foto de desarrollador web">
+                        </picture>
+                        <div class="card-text">
+                            <h2 class="titulo-card">Desarrollo Web</h2>
+                            <p class="parrafo-card">Diseño y Desarrollo de sitio web desde cero.</p>
+                            <h3 class="footer-card">Agosto/Septiembre - 2020</h3>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <picture>
+                            <img class="img-card" src="./img/responcive.jpg" alt=" foto de Diseño Responsive">
+                        </picture>
+                        <div class="card-text">
+                            <h2 class="titulo-card">Diseño Responsive</h2>
+                            <p class="parrafo-card">Adapté Sitio Web a Responsive Desing.</p>
+                            <h3 class="footer-card">Octubre - 2020</h3>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <picture>
+                            <img class="img-card" src="./img/frelancer.jpg" alt="desarrollador freelancer">
+                        </picture>
+                        <div class="card-text">
+                            <h2 class="titulo-card">Desarrollo freelancer</h2>
+                            <p class="parrafo-card">Participación freelancer en team de desarrollo web.</p>
+                            <h3 class="footer-card">Noviembre/diciembre - 2020</h3>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <picture>
+                            <img class="img-card" src="./img/team-developer.jpg" alt="Foto empresa de desarrollo">
+                        </picture>
+                        <div class="card-text">
+                            <h2 class="titulo-card">Desarrollador Junior</h2>
+                            <p class="parrafo-card">Trabajo para empresa de desarrollo como Desarrollador Front-end Junior.</p>
+                            <h3 class="footer-card">Enero/Diciembre - 2021</h3>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <picture>
+                            <img class="img-card" src="./img/re-designer.jpg" alt="foto de notebook">
+                        </picture>
+                        <div class="card-text">
+                            <h2 class="titulo-card">Desarrollador Senior</h2>
+                            <p class="parrafo-card">Trabajo para empresa de desarrollo como Desarrollador Front-end Senior.</p>
+                            <h3 class="footer-card">Enero/Actualidad - 2023</h3>
+                        </div>
                     </div>
                 </div>
-            
-                <div class="card-exp">
-                    <picture>
-                    <img class="img-card" src="./img/trabajo2.jpg" alt="Foto del Correo Argentino">
-                    </picture>
-                    <div class="card-text">
-                    <h2 class="titulo-card" >Correo Argentino</h2>
-                    <p class="parrafo-card" >Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam enim quisquam, in doloribus id iusto.</p>
-                    <h3 class="footer-card">Fecha del trabajo</h3>
-                    </div>
-                </div>
-
-                <div class="card-exp">
-                    <picture>
-                    <img class="img-card" src="./img/trabajo3.jpg" alt="Foto de Lo Grasso Iluminación">
-                    </picture>
-                    <div class="card-text">
-                    <h2 class="titulo-card" >Lo Grasso Iluminación</h2>
-                    <p class="parrafo-card" >Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam enim quisquam, in doloribus id iusto.</p>
-                    <h3 class="footer-card" >Fecha del trabajo</h3>
-                    </div>
-                </div>
-            </div>  -->   
+            </div>  
         </section>
         <br>
         <section class=".container-habilidades" id="habilidades"> <!-- Section Habilidades -->
