agregando links dell cv

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
             <h1 class="titulo-header">Pérez Juan</h1>
             <p class="subtitulo-header">Desarrollador Front-end</p>
             <div class="boton-header">
-                <button  class="boton-1" type="submit">Descargar CV</button>
+                <a href="https://drive.google.com/file/d/13wVthXBS-gnLZMtdFEu5qiGAh_LfVQYt/view?usp=share_link" target="_blank" rel="noopener"><button class="boton-1" >Descargar CV</button>
+                </a>
             </div>
         </div>
         <nav id="menuHeader" class="nav-header">
