--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="index,follow">
 
     <link rel="stylesheet" href="./css/estilos.css">
     <!-- Link al archivo Css -->
@@ -204,7 +205,7 @@
             <form action="" class="formulario" id="formulario">
 
                         <!-- Grupo Nombre -->
-                    <div class="form-grupo-N" id="grupo-nombre">
+                    <div class="form-grupo form-grupo-N" id="grupo-nombre">
                         <label for="nombre" class="form-label">Nombre</label>
                         <div class="form-grupo-input">
                             <input type="text" class="form-input" name="nombre" id="nombre" placeholder="Tu nombre">
@@ -214,7 +215,7 @@
                     </div>
 
                     <!-- Grupo Apellido -->
-                    <div class="form-grupo-A" id="grupo-apellido">
+                    <div class="form-grupo form-grupo-A" id="grupo-apellido">
                         <label for="apellido" class="form-label">Apellido</label>
                         <div class="form-grupo-input">
                             <input type="text" class="form-input" name="apellido" id="apellido" placeholder="Tu apellido">
