cambio de titulo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="https://kit.fontawesome.com/4a6ab54212.js" crossorigin="anonymous"></script>
     <!-- Link Js de los iconos -->
 
-    <title>Curriculum Vitae</title>
+    <title>Curriculum Vitae Pérez Juan</title>
 
 </head>
 <body class="container-body">
